Fixes text-align

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -74,7 +74,6 @@ button {
 .row {
     flex: 1 1 auto; /* grow, shrink, basis */
     display: flex;
-    text-align: center;
 }
 
 .grow {
